@@ -1,6 +1,11 @@
 [6/8/2012]
 Version 0.6.9                               "All in a days work"
 
+- Internal changes:
+
+  * Unified the way packages are selected from command line
+    arguments.
+
 [5/11/2012]
 Version 0.6.8                               "Never need a reason,
                                              never need a rhyme"
